--- a/playbook.yml
+++ b/playbook.yml
@@ -1,10 +1,13 @@
 ---
-- hosts: web_nodes
-  become: true
+- name: MariaDB
+  hosts: web_nodes
+
   tasks:
-     - name: Update apt-cache 
-       command: 'id'
-     - name: 'my script is running now ..... '
-       script: /tmp/hellow.sh
+    - name: Check /home freespace morethen 10% avaible 
+      shell: df  /vagrant | egrep -o '[0-9]+%' | cut -d'%' -f1
+      register: tmp_freespace
         
+    - fail:
+        msg: /VAGRANT does not have the minimum space 10% required to continue CURRENT USAGE % {{ tmp_freespace.stdout }} 
+      when: tmp_freespace.stdout <= "57"
 
